--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "garbguidencebackend",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.0",
+    "mongoose": "^8.2.1",
+    "mongoose-aggregate-paginate-v2": "^1.0.7",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.9.1",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
-    "password-hash": "^1.2.2",
-    "pug": "2.0.0-beta11",
-    "randomstring": "^1.3.0",
-    "sequelize": "^6.37.1"
+    "pug": "2.0.0-beta11"
   }
 }
