--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "nodemon -r dotenv/config --experimental-json-modules index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -21,6 +20,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
-    "pug": "2.0.0-beta11"
+    "password-hash": "^1.2.2",
+    "pug": "2.0.0-beta11",
+    "qr-image": "^3.2.0",
+    "qrcode": "^1.5.3"
   }
 }
